@@ -1,3 +1,8 @@
+2006-11-20  Daniel Borgmann  <daniel.borgmann@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_radiobutton): Hide border on menus
+
 2006-11-20  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/support/cairo-support.c: (ge_cairo_stroke_rectangle):
